# MemoryLeak

./: .gitignore  Answer.cpp  Answer.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Comment.cpp  Comment.hpp  CopiadeSeguridad1.txt  Interaction.cpp  Interaction.hpp  Member.cpp  Member.hpp  MemberLoginInfo.cpp  MemberLoginInfo.hpp  MemberProfileInfo.cpp  MemberProfileInfo.hpp  Question.cpp  Question.hpp  README2.md  main.cpp
tests/: CMakeLists.txt  test_memoryleak_application_basic.cpp  test_memoryleak_interactions.cpp  test_memoryleak_interactions_integration.cpp  test_memoryleak_load_save_to_file.cpp  test_memoryleak_member.cpp
